# rsearx-web

./: .gitignore  .releaserc  Cargo.toml  base.css  bonnie.toml  index.html  opensearch.xml  tailwind.config.js  tailwind.css
.github/workflows/: release.yml
src/: components.rs  main.rs  state.rs
src/components/: grades.rs  inputs.rs  options.rs  responses.rs  skew_header.rs
