[package]
name = "rsearx-web"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
wasm-logger = "0.2.0"
web-sys = "0.3.59"
yew = "0.19.3"
yew_icons = { version = "0.4.1", features = ["FontAwesomeSolidGears", "FeatherSearch"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

