[package]
name = "rsearx-web"
version = "1.0.0"
edition = "2021"

[dependencies]
gloo-net = "0.2.4"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2.0"
web-sys = "0.3.59"
wee_alloc = "0.4.5"
yew = "0.19.3"
yew_icons = { version = "0.4.1", features = ["FontAwesomeSolidGears", "FeatherSearch"]}

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 's'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

